--- a/style_section.css
+++ b/style_section.css
@@ -2278,4 +2278,5 @@ height:25px;
   font-size: 24px;
   font-style: italic;
   font-family: 'Crimson Text', serif;
+  margin-top: -13px;
 }
